# arrow-java-playground

./: README.md
arrow-java-playground/: pom.xml
arrow-java-playground/src/main/cpp/: MapValues.cpp  NativeExample.cpp
arrow-java-playground/src/main/java/io/arrow/playground/: App.java  HelloArrowJava.java  MemoryApp.java
arrow-java-playground/src/main/java/io/arrow/playground/compressor/: ArrowReaderExample.java
arrow-java-playground/src/main/java/io/arrow/playground/cpp/: HelloJava.java  MapValues.java  NativeExample.java  ToBeCalledByCpp.java
arrow-java-playground/src/main/java/io/arrow/playground/python/: FillTen.java  MapValueConsumerV2.java  MapValues.java  MapValuesConsumer.java
arrow-java-playground/src/test/java/io/arrow/playground/: AppTest.java
java-cpp/: CDataCppBridge.h  CDataDictionaryInterface.java  CDataDictionaryJavaConfig.java  CDataDictionaryJavaToCppExample.java  CDataJavaConfig.java  CDataJavaToCppExample.java  CMakeLists.txt  CallJavaFromCpp.cpp  CppToAcceptJava.cpp  DictionaryMaker.cpp  README.md  TestCDataInterface.java
java-python/: README.rst  Simple.java  fill_ten.py  map_dictionary_app.py  map_values_consumer.py  roundtrip_dictionary.py  simple.py
